# Stellar

./: .gitignore  BAHAN.md  CONTEXT.md  FLOW.md  Flow.md  ISSUES.md  README.md  Recap.md  Ref.md  Rekap.md  Success.md  TODO.md  UI.md  backup_main.dart  error.md  error_build.md  flutter_rust_bridge.yaml  l10n.yaml  possible_analytic.md  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/labs/oxfnd/stellar/: MainActivity.kt
assets/about/: about_cn.json  about_en.json  about_id.json  about_jp.json
assets/notification/: en.json  id.json  ja.json  zh.json
assets/tutorial/: tutorial_cn.json  tutorial_en.json  tutorial_id.json  tutorial_jp.json
assets/vision/: questions.json  questions_cn.json  questions_en.json  questions_jp.json  visions.json  visions_cn.json  visions_en.json  visions_jp.json
lib/: main.dart
lib/l10n/: app_en.arb  app_id.arb  app_ja.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_id.dart  app_localizations_ja.dart  app_localizations_zh.dart  app_zh.arb
lib/logic/: connect_logic.dart  pair_logic.dart
lib/native/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  wish_parser.dart
lib/native/api/: api.dart  api.freezed.dart
lib/screens/: about.dart  home.dart  import_data.dart  tutorial.dart  vision.dart  wish_counter.dart
lib/services/: log_service.dart  notification_service.dart
lib/utils/: ui_utils.dart
lib/widgets/: gi_detail.dart  gi_wish_result_view.dart  main_drawer.dart  wish_banner.dart  wish_result.dart
lib/widgets/genshin/: gi_detail.dart  gi_wish_result_view.dart
lib/widgets/hsr/: hsr_wish_result_view.dart
ref/: adb_wifi.cpp  aes-gcm-128.cpp  derive.md  pairing_auth.cpp  pairing_connection.cpp  rsa_2048_key.cpp
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: boring_helper.rs  connect.rs  frb_generated.rs  lib.rs  logger.rs  pair.rs  wish_parser.rs
rust/src/api/: api.rs
rust/src/wish/: core_parser.rs  genshin.rs  hsr.rs  json_parser.rs  mod.rs  zzz.rs
