[package]
name = "rust_lib_stellar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
boring = "4.8.0"
tokio-boring = "4.8.0"
bytes = "1.5"
spake2 = "0.4.0"
ring = "0.17.0"
prost = "0.13"
hex = "0.4"
log = "0.4"
android_logger = "0.13"
once_cell = "1.19"
