[package]
name = "rust_lib_stellar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
# Flutter Bridge
flutter_rust_bridge = "=2.11.1"

# BoringSSL FFI (AOSP adbd match)
ring = { version = "0.17.8", features = ["std"] }
boring = "5.0.0"
tokio-boring = "5.0.0"

# Async (minimal features -70% size)
tokio = { version = "1.35", features = ["rt", "net", "time", "io-util"] }

# Core utils
anyhow = "1.0"
bytes = "1.5"
hex = "0.4"
log = "0.4"
android_logger = "0.13"
once_cell = "1.19"
libc = "0.2"
rand = { version = "0.8", features = ["getrandom"] }
lazy_static = "1.4"

# Cryptography Curve25519
curve25519-dalek = { version = "4.1", features = ["group", "serde"] } # For SPAKE2 X25519
sha2 = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
