[package]
name = "rust_lib_stellar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = "z"     # Optimasi untuk ukuran binary terkecil
lto = true          # Link Time Optimization untuk menghapus kode yang tidak terpakai antar crate
codegen-units = 1   # Mengurangi paralelisasi kompilasi untuk optimasi yang lebih baik
panic = "abort"     # Menghapus overhead stack unwinding
strip = true        # Menghapus simbol debug secara otomatis (membutuhkan Rust 1.59+)

[profile.release.package."*"]
opt-level = "s"     # Beberapa dependensi lebih kecil dengan 's' daripada 'z'

[dependencies]
# Flutter Bridge
flutter_rust_bridge = "=2.11.1"

# BoringSSL (AOSP adbd match)
boring = "5.0.0"
tokio-boring = "5.0.0"

# Async
tokio = { version = "1.35", features = ["rt", "fs", "net", "time", "io-util"] }

# Core utils
anyhow = "1.0"
hex = "0.4"
log = "0.4"
android_logger = "0.13"
once_cell = "1.19"
rand = { version = "0.8", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.44"

# Cryptography Curve25519
sha2 = "0.10"
hkdf = "0.12"
